<resources>
    <string name="app_name"><b>Calculator</b></string>
    <string name="change_theme">Change Theme</string>
    <string name="history">History</string>
    <string name="rate">Rate me</string>
    <string name="about">About</string>
    <string name="aboutText">For any questions, suggestions or bugs please contact me on email: pavlostze@gmail.com\n\n
        Don\'t forget to leave a review on play store.\n App Version: 1.7.2 </string>
    <string name="divisionZero">Error: Division by zero.</string>
    <string name="cancel">Cancel</string>
    <string name="vibrate">Vibration</string>
    <string name="ClearHistory">Clear History</string>
    <string name="displayFormat">Display Format</string>
    <string name="selectDisplay">Select Display Format</string>
    <string name="ratedialog">Rate Me!</string>
    <string name="rateandreviewdialog">Yes. I want to rate you!</string>
    <string name="remindmelaterdialog">Remind me later.</string>
    <string name="nothanksdialog">No, thanks.</string>
    <string name="textdialog">\nIf you like me, please leave a rating and a review. Thank you!\n</string>
    <string name="donate" translatable="false">Donate</string>
    <string name="donate_title_dialog" translatable="false">Make me happy!</string>
    <string name="donate_yes_dialog"  translatable="false">Yes. I want to help!</string>
    <string name="donation_description" translatable="false">
        As you already know, this app has no ads or any other way of getting revenue.
        I find ads annoying as much as you do so the only way to get some revenue is through donations.\n\nIf you appreciate my work and this app makes your life easier, feel free to make me happy by donating with one of the methods below.
    </string>
    <string name="donation_description_dialog" translatable="false">
        This application has no ads.
        I find them annoying as much as you do, that\'s why I do not use them.\n\n
        If you appreciate it, you can check how you can help me by clicking the button below.
    </string>
    <string name="success_donation" translatable="false">Thank you for your donation. It is a great help.</string>
    <string name="user_canceled_donation" translatable="false">Thank you for the consideration. If you changed your mind for a reason, contact me.</string>
    <string name="error_donation" translatable="false">An error has occurred. Please try again or contact me if the problem persists.</string>

    <string name="firstLaunch" translatable="false">"I do NOT have any ads. If you enjoy me, <b>please leave a review</b> for me in Google Play Store.\n"</string>
    <string name="firstLaunchTitle" translatable="false">"Thanks for downloading me"</string>
    <string name="OK" translatable="false">"OK"</string>
    <string name="dotComma" translatable="false">"1.000,50"</string>
    <string name="commaDot" translatable="false">"1,000.50"</string>
    <string name="spaceDot" translatable="false">"1 000.50"</string>
    <string name="spaceComma" translatable="false">"1 000,50"</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="add" translatable="false">+</string>
    <string name="subtract" translatable="false">−</string>
    <string name="divide" translatable="false">÷</string>
    <string name="multiply" translatable="false">×</string>
    <string name="percentage" translatable="false">%</string>
    <string name="del" translatable="false">DEL</string>
    <string name="clear" translatable="false">C</string>
    <string name="result" translatable="false">=</string>
    <string name="posNeg" translatable="false">±</string>
    <string name="comma" translatable="false">.</string>
    <string name="sqrt" translatable="false">√</string>
    <string name="x2" translatable="false">x²</string>

    <string name="memread" translatable="false">MR</string>
    <string name="memclear" translatable="false">MC</string>
    <string name="memadd" translatable="false">M+</string>
    <string name="memsub" translatable="false">M-</string>

    <string name="memory" translatable="false">memory</string>

    <string name="memoryAdd" translatable="false">memoryAdd</string>
    <string name="memorySub" translatable="false">memorySub</string>
    <string name="memoryRead" translatable="false">memoryRead</string>
    <string name="memoryClear" translatable="false">memoryClear</string>
    <string name="ClearText" translatable="false">clearTexts</string>
    <string name="activityMain" translatable="false">activity_main</string>
    <string name="activityMainGreen" translatable="false">activity_main_green</string>
    <string name="activityMainPink" translatable="false">activity_main_pink</string>
    <string name="activityMainDarkModern" translatable="false">activity_main_dark_modern</string>
    <string name="activityMainLightModern" translatable="false">activity_main_light_modern</string>
    <string name="activityMainPinkModern" translatable="false">activity_main_pink_modern</string>
    <string name="onClick" translatable="false">onClick</string>
    <string name="onClickDel" translatable="false">onClickDel</string>
</resources>
