<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/themeChanger"
        android:title="@string/change_theme"
        android:icon="@drawable/ic_action_action_visibility"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/history"
        android:title="@string/history"
        app:showAsAction="never"
        android:orderInCategory="1"/>

    <item android:id="@+id/displayFormat"
        android:title="@string/displayFormat"
        app:showAsAction="never"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/vibrator"
        android:checkable="true"
        android:title="@string/vibrate"
        app:showAsAction="never"
        android:orderInCategory="4"/>

    <item android:id="@+id/rate"
        android:title="@string/rate"
        android:icon="@drawable/ic_action_toggle_star"
        app:showAsAction="ifRoom"
        android:orderInCategory="5"/>

    <item android:id="@+id/donate"
        android:title="@string/donate"
        app:showAsAction="always"
        android:icon="@drawable/ic_donate"
        android:orderInCategory="6"/>

    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"
        android:orderInCategory="7"/>

</menu>